refactor: Improve ExchangeRateService and FlutterwaveApiResponse for better data handling
- Updated ExchangeRateService to utilize a specific response class for fetching exchange rates, enhancing type safety and clarity.
- Refactored FlutterwaveApiResponse to use JsonNode for dynamic data handling, simplifying the extraction of fields and improving null safety.
- Modified PaymentController to read payloads using JsonNode, streamlining event processing and reducing type casting.
- Enhanced QueueWorker to safely handle variable data extraction from incoming messages, improving robustness.